--- a/pom.xml
+++ b/pom.xml
@@ -79,13 +79,15 @@
                                 <value>io.qameta.allure.junit4.AllureJunit4</value>
                             </property>
                         </properties>
-                        <systemPropertyVariables>
+                        <systemProperties>  <!-- Maven выдает предупреждение
+                        '[WARNING]  Parameter 'systemProperties' is deprecated: Use systemPropertyVariables instead.'
+                        не стОит исправлять имя тэга, т.к. настройки перестют работать -->
                             <property>
                                 <!-- папка, в которую будут генерироваться отчёты Allure -->
                                 <name>allure.results.directory</name>
                                 <value>${project.build.directory}/allure-results</value>
                             </property>
-                        </systemPropertyVariables>
+                        </systemProperties>
                     </configuration>
                     <dependencies>
                         <dependency>
